--- a/adaction-back/package.json
+++ b/adaction-back/package.json
@@ -10,10 +10,10 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
-  }
+  },
+  "description": ""
 }
