--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "adaction-front/**", "use": "@vercel/static" }
-  ],
   "routes": [
     { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/adaction-front/index.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
